# purple-gold-gourd

./: .gitignore  LICENSE  README.md  README.zh.md  protocol.md  pyproject.toml  requirements-full.txt  requirements.txt
purple_gold_gourd/: __init__.py  cli.py  config.py  language.py  pipeline.py  schema.py  utils.py
purple_gold_gourd/chat/: discussion.py  llm.py  persona.py  retrieval.py  skillgen.py  web_search.py
purple_gold_gourd/media/: downloader.py  platforms.py  transcribe.py  video.py
purple_gold_gourd/plugins/: __init__.py  base.py  registry.py
purple_gold_gourd/plugins/stt/: __init__.py  base.py  registry.py  shared.py
purple_gold_gourd/plugins/stt/funasr/: __init__.py  plugin.py  transcriber.py
purple_gold_gourd/plugins/tts/: __init__.py  base.py  registry.py  shared.py
purple_gold_gourd/plugins/tts/qwen3/: __init__.py  plugin.py  voice.py
purple_gold_gourd/synthesis/: voice.py
tests/: test_config.py  test_discussion_audio.py  test_discussion_video.py  test_packaging.py  test_prompts.py  test_qwen3_tts.py
